# demeter

./: .gitignore  README.md  bun.lockb  config.example.ts  package.json  tailwind.config.js
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: app.tsx  router.tsx
src/components/: Sidebar.tsx
src/components/pages/: Builds.tsx  Home.tsx  Login.tsx  NotFound.tsx
src/components/tabs/: AddBuildTab.tsx  BuildsTab.tsx
src/lib/api/: axiosClient.ts  endpoints.ts
src/providers/: AuthProvider.ts  AxiosProvider.ts
src/store/: useBuildStore.ts  userStore.ts
src/styles/: globals.css  home.css
src/types/: profiles.ts  requests.ts
